Send the value of the http_proxy env var to the worker, since it normally runs in a shell-less environment with no env vars defined.

BUG:275276
FIXED-IN: 1.1.85, 1.1.4

Conflicts:

	src/backend.cpp