src/backend.cpp
@@ -90,6 +90,8 @@ public:
     Config *config;
 
     bool writeSelectionFile(const QString &file, const QString &path) const;
+    void setWorkerLocale();
+    void setWorkerProxy();
 };
 
 bool BackendPrivate::writeSelectionFile(const QString &selectionDocument, const QString &path) const
@@ -103,6 +105,17 @@ bool BackendPrivate::writeSelectionFile(const QString &selectionDocument, const 
     }
 
     return true;
+}
+
+void BackendPrivate::setWorkerLocale()
+{
+    worker->setLocale(QLatin1String(setlocale(LC_MESSAGES, 0)));
+}
+
+void BackendPrivate::setWorkerProxy()
+{
+    qDebug() << "Mah proxeh: " << QLatin1String(getenv("http_proxy"));
+    worker->setProxy(QLatin1String(getenv("http_proxy")));
 }
 
 Backend::Backend()
@@ -792,7 +805,8 @@ void Backend::commitChanges()
         }
     }
 
-    d->worker->setLocale(QLatin1String(setlocale(LC_MESSAGES, 0)));
+    d->setWorkerLocale();
+    d->setWorkerProxy();
     d->worker->commitChanges(packageList);
 }
 
@@ -805,7 +819,8 @@ void Backend::updateCache()
 {
     Q_D(Backend);
 
-    d->worker->setLocale(QLatin1String(setlocale(LC_MESSAGES, 0)));
+    d->setWorkerLocale();
+    d->setWorkerProxy();
     d->worker->updateCache();
 }
 
